--- a/src/App.scss
+++ b/src/App.scss
@@ -23,12 +23,111 @@
   padding-bottom: 30px;
 }
 
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--bg-color);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--yellow-color);
+  border-radius: 8px;
+}
+
 .wrapper {
+
   display: flex;
   border: 10px solid var(--yellow-color);
   width: 62%;
-  min-height: 600px;
+  min-height: 560px;
+  max-height: 660px;
   border-radius: 1em;
+  z-index: 100;
+
+
+
+  .sidebar {
+    width: 10%;
+    align-content: center;
+    border-right: 6px solid var(--yellow-color);
+  }
+
+  .sidebar img {
+    cursor: pointer;
+    margin-bottom: 35%;
+  }
+
+  .main {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .taskCount {
+    color: var(--cyan-color);
+    text-align: right;
+    font-size: 1.5em;
+    margin: 20px 25px;
+  }
+
+  .taskHolder {
+    height: 75%;
+    overflow-y: auto;
+  }
+  .inputHolder {
+    display: flex;
+    align-items: center;
+    padding: 20px 25px;
+    flex: 1;
+    background-color: var(--inputField);
+  }
+
+  .inputHolder input{
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-family: Bauhaus, serif;
+    font-size: 32px;
+    width: 100%;
+    margin-right: 25px;
+    outline: none;
+  }
+
+  .inputHolder img:hover{
+    transform: rotate(90deg)
+  }
+
+  .inputHolder img:active{
+    transform: rotate(100deg)
+  }
+
+  @media (max-width: 950px) {
+    flex-direction: column;
+
+    overflow-y: auto;
+    .sidebar {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      height: 300px;
+      border-right: none;
+    }
+    .sidebar img{
+      padding-right: 5%;
+      padding-left: 5%;
+      margin-bottom: 2.5%;
+      margin-top: 2.5%;
+    }
+
+    .taskCount {
+      text-align: center;
+    }
+
+  }
+
 }
 
 .bgImg {
@@ -36,8 +135,10 @@
   position: absolute;
   left: 0;
   max-height: 98vh;
+  width: 100%;
   opacity: 0.3;
   filter: blur(4px);
+  z-index: 0;
 }
 
 h1 {
@@ -46,4 +147,39 @@ h1 {
   font-size: 128px;
   font-weight: inherit;
 
+}
+
+
+
+.imgAnim {
+  transition: transform 0.2s ease;
+  cursor: pointer;
+}
+.imgAnim:hover {
+  transform: scale(0.95) rotate(5deg);
+}
+
+.imgAnim:active {
+  transform: scale(1.05)  rotate(10deg);
+}
+
+.cleanBlock {
+  z-index: 100;
+}
+
+.cleanBlock p {
+  margin-top: 35px;
+  margin-bottom: 20px;
+  color: white;
+}
+
+.cleanBlock img {
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+
+@media (max-width: 400px) {
+  h1 {
+    font-size: 2rem;
+  }
 }
