--- a/src/App.scss
+++ b/src/App.scss
@@ -178,6 +178,11 @@ h1 {
   transition: transform 0.2s ease;
 }
 
+.intersecter {
+  width: 100%;
+  height: 1px;
+}
+
 @media (max-width: 400px) {
   h1 {
     font-size: 2rem;
