--- a/src/App.scss
+++ b/src/App.scss
@@ -64,6 +64,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    overflow: hidden;
   }
 
   .taskCount {
@@ -180,7 +181,7 @@ h1 {
 
 .intersecter {
   width: 100%;
-  height: 1px;
+  height: 5px;
 }
 
 @media (max-width: 400px) {
