--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,7 +1,8 @@
 :root {
   --bg-color: #181A1B;
-  --cyan-color: #07F5AF;
-  --yellow-color: #F5CE42;
-  --magenta-color: #F507F4;
+  --additionalText-color: #07F5AF;
+  --mainApp-color: #F5CE42;
+  --defaultColor : #F5CE42;
+  --rare-color: #F507F4;
   --inputField: #1B1303;
 }
