--- a/src/components/task/task.css
+++ b/src/components/task/task.css
@@ -7,7 +7,7 @@
     border: 2px solid #2C2C2C;
     border-left: none;
     border-right: none;
-    color: var(--yellow-color);
+    color: var(--mainApp-color);
 
     z-index: 100;
 }
@@ -22,6 +22,7 @@
     text-align: left;
     width: 90%;
     overflow: hidden;
+
 }
 
 .taskDate {
